kubernetes/cilium/addl/dashboard.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: whoami
spec:
  parentRefs:
    - name: cilium-gateway
      namespace: cilium
  hostnames:
    - "whoami.local.10.122.57.50.sslip.io"
  rules:
    - backendRefs:
        - name: whoami
          port: 80
