kubernetes/cilium/addl/hubble-ui.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: hubble-ui
  namespace: cilium
spec:
  parentRefs:
    - name: cilium-gateway
      namespace: cilium
  hostnames:
    - "hubble-ui.local.10.122.57.50.sslip.io"
  rules:
    - backendRefs:
        - name: hubble-ui
          port: 80
